@@ -33,7 +33,7 @@
       <a id="for_all" target="_self" href="{% url sale_home %}" class="col-xs-3 {% if not category %}active{% endif %}">首页</a>
       <a id="for_boy" target="_self" href="{% url sale_home %}?category=5{% if history %}&history={{ history }}{% endif %}{% if time_line %}&time_line={{ time_line }}{% endif %}" class="col-xs-3 {% if category == '5' %}active{% endif %}">童装</a>
       <a id="for_wom" target="_self" href="{% url sale_home %}?category=8{% if history %}&history={{ history }}{% endif %}{% if time_line %}&time_line={{ time_line }}{% endif %}" class="col-xs-3 {% if category == '8' %}active{% endif %}">女装</a>
-      <a id="for_fam" target="_self" href="{% url sale_home %}?category=9{% if history %}&history={{ history }}{% endif %}{% if time_line %}&time_line={{ time_line }}{% endif %}" class="col-xs-3 {% if category == '9' %}active{% endif %}">亲子装</a>
+      <a id="for_fam" target="_self" href="{% url sale_home %}?category=11{% if history %}&history={{ history }}{% endif %}{% if time_line %}&time_line={{ time_line }}{% endif %}" class="col-xs-3 {% if category == '11' %}active{% endif %}">X秒杀</a>
     </div>
   </div>
 
