@@ -49,7 +49,7 @@
     </dd>
   </dl>
 </div>
-<div class="glist">
+<div class="glist chaotong">
   <div class="header">
     <div class="text"><i></i>潮童专区</div>
     <div class="shengyu"><i></i>剩余2天1小时</div>
@@ -75,54 +75,14 @@
         </p>
       </a>
     </li>
-    <li>
-      <a href="#">
-        <img src="images/goods-thumb.png">
-        <p class="gname">男童超薄透气款套装</p>
-        <p class="gprice">
-          <span class="nprice">¥ 68 </span>
-          <s class="oprice">¥ 168</s>
-        </p>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        <img src="images/goods-thumb.png">
-        <p class="gname">男童超薄透气款套装</p>
-        <p class="gprice">
-          <span class="nprice">¥ 68 </span>
-          <s class="oprice">¥ 168</s>
-        </p>
-      </a>
-    </li>
   </ul>
 </div>
-<div class="glist">
+<div class="glist nvzhuang">
   <div class="header">
     <div class="text"><i></i>时尚女装</div>
     <div class="shengyu"><i></i>剩余2天1小时</div>
   </div>
   <ul>
-    <li>
-      <a href="">
-        <img src="images/goods-thumb.png">
-        <p class="gname">男童超薄透气款套装</p>
-        <p class="gprice">
-          <span class="nprice">¥ 68 </span>
-          <s class="oprice">¥ 168</s>
-        </p>
-      </a>
-    </li>
-    <li>
-      <a href="">
-        <img src="images/goods-thumb.png">
-        <p class="gname">男童超薄透气款套装</p>
-        <p class="gprice">
-          <span class="nprice">¥ 68 </span>
-          <s class="oprice">¥ 168</s>
-        </p>
-      </a>
-    </li>
     <li>
       <a href="">
         <img src="images/goods-thumb.png">
