@@ -149,6 +149,7 @@ nav a:active,
 }
 .glist{
   width: 640px;
+  min-height:470px;
   margin: 0 auto;
 }
 .glist .header{
@@ -205,12 +206,15 @@ nav a:active,
 .glist li a img{
   display: block;
   width: 100%;
+  height:320px;
 }
 .glist .gname{
-  font-size: 20px;
+  font-size: 18px;
   color: #5f5f5e;
   text-indent: 10px;
   line-height: 2;
+  overflow:hidden;
+  white-space:nowrap;
 }
 .glist .gprice{
   height: 40px;
