@@ -1,11 +1,12 @@
 var GLConfig = {
 	baseApiUrl:'/rest/v1/',
+	today_suffix:'today',
+	previous_suffix:'previous'
 };
 
-$(function(){
-	//获取今日海报
-	
-	var posterUrl = GLConfig.baseApiUrl + 'posters/today.json';
+function Set_posters(suffix){
+	//获取海报
+	var posterUrl = GLConfig.baseApiUrl + 'posters/'+ suffix +'.json';
 	
 	var posterCallBack = function(data){
 		console.log('debug: poster xhr,',data.wem_posters);
@@ -27,12 +28,66 @@ $(function(){
 		);
 		
 	};
-	
+	// 请求海报数据
 	$.ajax({ 
 		type:'get', 
 		url:posterUrl, 
-		data:{},//可以直接加一个函数名。 
+		data:{}, 
 		dataType:'json', 
 		success:posterCallBack 
 	}); 
-})
+}
+
+function Create_item_dom(p_obj){
+	var ht = '<li>'
+      + '<a href="pages/details.html?item_id='+ p_obj.id +'">'
+      + '<img src="'+ p_obj.pic_path +'">'
+      + '<p class="gname">'+ p_obj.name +'</p>'
+      + '<p class="gprice">'
+      + '<span class="nprice"><em>¥</em>'+ p_obj.agent_price +'</span>'
+      + '<s class="oprice"><em>¥</em> '+ p_obj.std_sale_price +'</s>'
+      + '</p></a></li>';
+    return ht;
+}
+
+function Set_promotes_product(suffix){
+	//获取今日推荐商品
+	var promoteUrl = GLConfig.baseApiUrl + 'products/promote_'+ suffix +'.json';
+	
+	var promoteCallBack = function(data){
+		console.log('debug type:',typeof(data.female_list));
+		if (typeof(data.female_list) != 'undifine' && typeof(data.female_list) != null){
+			
+			$('.glist .nvzhuang').empty();
+			//设置女装推荐链接及图片
+			$.each(data.female_list,
+				function(index,p_obj){
+					var item_dom = Create_item_dom(p_obj);
+					$('.glist .nvzhuang').append(item_dom);
+				}
+			);
+		}
+		
+		if (typeof(data.child_list) != 'undifine' && typeof(data.child_list) != null){
+			
+			$('.glist .chaotong').empty();
+			//设置童装推荐链接及图片
+			$.each(data.child_list,
+				function(index,p_obj){
+					var item_dom = Create_item_dom(p_obj);
+					$('.glist .chaotong').append(item_dom);
+				}
+			);
+		}
+	};
+	// 请求推荐数据
+	$.ajax({ 
+		type:'get', 
+		url:promoteUrl, 
+		data:{}, 
+		dataType:'json', 
+		success:promoteCallBack 
+	}); 
+	
+}
+
